- datasets: created and analyzed an additional validation set for xBD and PakistanFlooding. - train script: modified to save only last and best models. Increased train evaluation buffer size and reset for each eval. - inference script: added attention map saving feature. saves model's attention maps from all stages to better interpret the results.

--- a/dataset_analysis_scripts/pakistan-flooding_dataset_analysis.ipynb
+++ b/dataset_analysis_scripts/pakistan-flooding_dataset_analysis.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3540/3540 [00:00<00:00, 4651577.74it/s]\n"
+      "100%|██████████| 3540/3540 [00:00<00:00, 4927924.38it/s]"
      ]
     },
     {
@@ -570,23 +570,10 @@
      "text": [
       "Created: /mnt/storage1/alpgenc/change_detection/datasets/pakistan_flooding/pakistan-flooding/all_list.txt\n",
       "Generated: /mnt/storage1/alpgenc/change_detection/datasets/pakistan_flooding/pakistan-flooding/train_list.txt\n",
-      "Generated: /mnt/storage1/alpgenc/change_detection/datasets/pakistan_flooding/pakistan-flooding/test_list.txt\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1589/1589 [00:00<00:00, 5418495.17it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created: /mnt/storage1/alpgenc/change_detection/datasets/pakistan_flooding/filtered/all_list.txt\n",
-      "Generated: /mnt/storage1/alpgenc/change_detection/datasets/pakistan_flooding/filtered/train_list.txt\n",
-      "Generated: /mnt/storage1/alpgenc/change_detection/datasets/pakistan_flooding/filtered/test_list.txt\n"
+      "Generated: /mnt/storage1/alpgenc/change_detection/datasets/pakistan_flooding/pakistan-flooding/test_list.txt\n",
+      "Generated: /mnt/storage1/alpgenc/change_detection/datasets/pakistan_flooding/pakistan-flooding/train_list_v2.txt\n",
+      "Generated: /mnt/storage1/alpgenc/change_detection/datasets/pakistan_flooding/pakistan-flooding/validation_list_v2.txt\n",
+      "Generated: /mnt/storage1/alpgenc/change_detection/datasets/pakistan_flooding/pakistan-flooding/test_list_v2.txt\n"
      ]
     },
     {
@@ -629,16 +616,384 @@
     "            f.write(f\"{d.stem}\\n\")\n",
     "        print(f\"Generated: {os.path.realpath(f.name)}\")\n",
     "\n",
+    "def create_train_validation_test_lists(base_path: str, all_data: list[DataPaths], train_ratio: float, val_ratio: float):\n",
+    "    TOTAL = len(all_data)\n",
+    "    TRAIN_END = round(TOTAL * train_ratio)\n",
+    "    VAL_END = round(TOTAL * (train_ratio + val_ratio))\n",
+    "\n",
+    "    with open(f\"{base_path}/train_list_v2.txt\", \"w\") as f:\n",
+    "        for i in range(0, TRAIN_END):\n",
+    "            d = all_data[i]\n",
+    "            f.write(f\"{d.stem}\\n\")\n",
+    "        print(f\"Generated: {os.path.realpath(f.name)}\")\n",
+    "\n",
+    "    with open(f\"{base_path}/validation_list_v2.txt\", \"w\") as f:\n",
+    "        for i in range(TRAIN_END, VAL_END):\n",
+    "            d = all_data[i]\n",
+    "            f.write(f\"{d.stem}\\n\")\n",
+    "        print(f\"Generated: {os.path.realpath(f.name)}\")\n",
+    "\n",
+    "    with open(f\"{base_path}/test_list_v2.txt\", \"w\") as f:\n",
+    "        for i in range(VAL_END, TOTAL):\n",
+    "            d = all_data[i]\n",
+    "            f.write(f\"{d.stem}\\n\")\n",
+    "        print(f\"Generated: {os.path.realpath(f.name)}\")\n",
     "################################################################################################################\n",
     "\n",
-    "TRAIN_RATIO = 0.80\n",
+    "TRAIN_RATIO = 0.70\n",
+    "VAL_RATIO = 0.15\n",
     "\n",
     "create_combined_list(BASE_PATH, all_data)\n",
     "create_train_test_lists(BASE_PATH, all_data, TRAIN_RATIO)\n",
+    "create_train_validation_test_lists(BASE_PATH, all_data, TRAIN_RATIO, VAL_RATIO)\n",
     "\n",
-    "create_combined_list(FILTERED_BASE_PATH, all_filtered_data)\n",
-    "create_train_test_lists(FILTERED_BASE_PATH, all_filtered_data, TRAIN_RATIO)\n",
+    "# create_combined_list(FILTERED_BASE_PATH, all_filtered_data)\n",
+    "# create_train_test_lists(FILTERED_BASE_PATH, all_filtered_data, TRAIN_RATIO)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test Set Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test data size: 708\n"
+     ]
+    }
+   ],
+   "source": [
+    "from dataclasses import dataclass\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "\n",
+    "all_test_data: list[DataPaths] = []\n",
+    "with open(f\"{BASE_PATH}/test_list.txt\", \"r\") as f:\n",
+    "    lines = f.readlines()\n",
+    "    lines = [line.strip() for line in lines]\n",
+    "    for line in lines:\n",
+    "        d = DataPaths(\n",
+    "            pre_img     = f\"{BASE_PATH}/images/{line}_pre_disaster.png\",\n",
+    "            post_img    = f\"{BASE_PATH}/images/{line}_post_disaster.png\",\n",
+    "            pre_target  = f\"{BASE_PATH}/targets/{line}_pre_disaster_target.png\",\n",
+    "            post_target = f\"{BASE_PATH}/targets/{line}_post_disaster_target.png\",\n",
+    "            stem = line\n",
+    "        )\n",
+    "        all_test_data.append(d)\n",
+    "\n",
+    "print(f\"Test data size: {len(all_test_data)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 708/708 [00:00<00:00, 748.40it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Statistics ===\n",
+      "All Data: 708\n",
+      "Number of images that doesn't contain any buildings: 389\n",
+      "Number of images that doesn't contain any damaged buildings: 113\n",
+      "Number of images with at most Minor Damage level: 37\n",
+      "Number of images with at most Major Damage level: 18\n",
+      "Number of images with at most Destroyed level: 151\n",
+      " *** \n",
+      "Number of images that contain backround: 708\n",
+      "Number of images that contain undamaged buildings: 230\n",
+      "Number of images that contain Minor Damage level: 91\n",
+      "Number of images that contain Major Damage level: 56\n",
+      "Number of images that contain Destroyed level: 151\n",
+      " *** \n",
+      "Ratio of undamaged pixels: 79.5009%\n",
+      "Ratio of Minor Damage pixels: 9.3554%\n",
+      "Ratio of Major Damage pixels: 3.8086%\n",
+      "Ratio of Destroyed pixels: 7.3350%\n",
+      " *** \n",
+      "( All damage levels in the dataset: [0, 1, 2, 3, 4] )\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import cv2\n",
+    "import tqdm\n",
+    "\n",
+    "damage_levels_dict = {\n",
+    "    0: \"Not Building\",\n",
+    "    1: \"No Damage\",\n",
+    "    2: \"Minor Damage\",\n",
+    "    3: \"Major Damage\",\n",
+    "    4: \"Destroyed\"\n",
+    "}\n",
+    "\n",
+    "max_levels = {0: 0, 1: 0, 2: 0, 3: 0, 4: 0}\n",
+    "dmg_level_existences = {0: 0, 1: 0, 2: 0, 3: 0, 4: 0}\n",
+    "dmg_level_pixel_counts = {1: 0, 2: 0, 3: 0, 4: 0}\n",
+    "for data in tqdm.tqdm(all_test_data):\n",
+    "    post_target = cv2.imread(data.post_target, cv2.IMREAD_GRAYSCALE)\n",
+    "\n",
+    "    maxlvl = post_target.max()\n",
+    "    max_levels[maxlvl] += 1\n",
+    "\n",
+    "    unq = np.unique(post_target)\n",
+    "    for val in unq:\n",
+    "        dmg_level_existences[val] += 1\n",
+    "        if val != 0:\n",
+    "            dmg_level_pixel_counts[val] += (post_target == val).sum()\n",
+    "\n",
+    "total_pix_count = sum(dmg_level_pixel_counts.values())\n",
+    "\n",
+    "print(\"=== Statistics ===\")\n",
+    "print(\"All Data:\", len(all_test_data))\n",
+    "print(\"Number of images that doesn't contain any buildings:\", max_levels[0])\n",
+    "print(\"Number of images that doesn't contain any damaged buildings:\", max_levels[1])\n",
+    "print(\"Number of images with at most Minor Damage level:\", max_levels[2])\n",
+    "print(\"Number of images with at most Major Damage level:\", max_levels[3])\n",
+    "print(\"Number of images with at most Destroyed level:\", max_levels[4])\n",
+    "print(\" *** \")\n",
+    "print(\"Number of images that contain backround:\", dmg_level_existences[0])\n",
+    "print(\"Number of images that contain undamaged buildings:\", dmg_level_existences[1])\n",
+    "print(\"Number of images that contain Minor Damage level:\", dmg_level_existences[2])\n",
+    "print(\"Number of images that contain Major Damage level:\", dmg_level_existences[3])\n",
+    "print(\"Number of images that contain Destroyed level:\", dmg_level_existences[4])\n",
+    "print(\" *** \")\n",
+    "print(f\"Ratio of undamaged pixels: {dmg_level_pixel_counts[1] / total_pix_count:.4%}\")\n",
+    "print(f\"Ratio of Minor Damage pixels: {dmg_level_pixel_counts[2] / total_pix_count:.4%}\")\n",
+    "print(f\"Ratio of Major Damage pixels: {dmg_level_pixel_counts[3] / total_pix_count:.4%}\")\n",
+    "print(f\"Ratio of Destroyed pixels: {dmg_level_pixel_counts[4] / total_pix_count:.4%}\")\n",
+    "print(\" *** \")\n",
+    "print(f\"( All damage levels in the dataset: {list(dmg_level_existences.keys())} )\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testv2 & Validationv2 Set Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test data size: 531\n",
+      "Validation data size: 531\n"
+     ]
+    }
+   ],
+   "source": [
+    "from dataclasses import dataclass\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "\n",
+    "all_testv2_data: list[DataPaths] = []\n",
+    "with open(f\"{BASE_PATH}/test_list_v2.txt\", \"r\") as f:\n",
+    "    lines = f.readlines()\n",
+    "    lines = [line.strip() for line in lines]\n",
+    "    for line in lines:\n",
+    "        d = DataPaths(\n",
+    "            pre_img     = f\"{BASE_PATH}/images/{line}_pre_disaster.png\",\n",
+    "            post_img    = f\"{BASE_PATH}/images/{line}_post_disaster.png\",\n",
+    "            pre_target  = f\"{BASE_PATH}/targets/{line}_pre_disaster_target.png\",\n",
+    "            post_target = f\"{BASE_PATH}/targets/{line}_post_disaster_target.png\",\n",
+    "            stem = line\n",
+    "        )\n",
+    "        all_testv2_data.append(d)\n",
+    "\n",
+    "print(f\"Test data size: {len(all_testv2_data)}\")\n",
+    "\n",
+    "all_validv2_data: list[DataPaths] = []\n",
+    "with open(f\"{BASE_PATH}/test_list_v2.txt\", \"r\") as f:\n",
+    "    lines = f.readlines()\n",
+    "    lines = [line.strip() for line in lines]\n",
+    "    for line in lines:\n",
+    "        d = DataPaths(\n",
+    "            pre_img     = f\"{BASE_PATH}/images/{line}_pre_disaster.png\",\n",
+    "            post_img    = f\"{BASE_PATH}/images/{line}_post_disaster.png\",\n",
+    "            pre_target  = f\"{BASE_PATH}/targets/{line}_pre_disaster_target.png\",\n",
+    "            post_target = f\"{BASE_PATH}/targets/{line}_post_disaster_target.png\",\n",
+    "            stem = line\n",
+    "        )\n",
+    "        all_validv2_data.append(d)\n",
+    "\n",
+    "print(f\"Validation data size: {len(all_validv2_data)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Testv2 Set Statistics ===\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 531/531 [00:01<00:00, 327.28it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Statistics ===\n",
+      "All Data: 531\n",
+      "Number of images that doesn't contain any buildings: 288\n",
+      "Number of images that doesn't contain any damaged buildings: 85\n",
+      "Number of images with at most Minor Damage level: 26\n",
+      "Number of images with at most Major Damage level: 13\n",
+      "Number of images with at most Destroyed level: 119\n",
+      " *** \n",
+      "Number of images that contain backround: 531\n",
+      "Number of images that contain undamaged buildings: 174\n",
+      "Number of images that contain Minor Damage level: 67\n",
+      "Number of images that contain Major Damage level: 42\n",
+      "Number of images that contain Destroyed level: 119\n",
+      " *** \n",
+      "Ratio of undamaged pixels: 79.8609%\n",
+      "Ratio of Minor Damage pixels: 8.8694%\n",
+      "Ratio of Major Damage pixels: 3.9423%\n",
+      "Ratio of Destroyed pixels: 7.3274%\n",
+      " *** \n",
+      "( All damage levels in the dataset: [0, 1, 2, 3, 4] )\n",
+      "=== Validationv2 Set Statistics ===\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 531/531 [00:00<00:00, 762.54it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Statistics ===\n",
+      "All Data: 531\n",
+      "Number of images that doesn't contain any buildings: 288\n",
+      "Number of images that doesn't contain any damaged buildings: 85\n",
+      "Number of images with at most Minor Damage level: 26\n",
+      "Number of images with at most Major Damage level: 13\n",
+      "Number of images with at most Destroyed level: 119\n",
+      " *** \n",
+      "Number of images that contain backround: 531\n",
+      "Number of images that contain undamaged buildings: 174\n",
+      "Number of images that contain Minor Damage level: 67\n",
+      "Number of images that contain Major Damage level: 42\n",
+      "Number of images that contain Destroyed level: 119\n",
+      " *** \n",
+      "Ratio of undamaged pixels: 79.8609%\n",
+      "Ratio of Minor Damage pixels: 8.8694%\n",
+      "Ratio of Major Damage pixels: 3.9423%\n",
+      "Ratio of Destroyed pixels: 7.3274%\n",
+      " *** \n",
+      "( All damage levels in the dataset: [0, 1, 2, 3, 4] )\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import cv2\n",
+    "import tqdm\n",
+    "\n",
+    "def analyze_dataset(all_data: list[DataPaths], dataset_name: str):\n",
+    "    print(f\"=== {dataset_name} Statistics ===\")\n",
+    "    damage_levels_dict = {\n",
+    "        0: \"Not Building\",\n",
+    "        1: \"No Damage\",\n",
+    "        2: \"Minor Damage\",\n",
+    "        3: \"Major Damage\",\n",
+    "        4: \"Destroyed\"\n",
+    "    }\n",
+    "\n",
+    "    max_levels = {0: 0, 1: 0, 2: 0, 3: 0, 4: 0}\n",
+    "    dmg_level_existences = {0: 0, 1: 0, 2: 0, 3: 0, 4: 0}\n",
+    "    dmg_level_pixel_counts = {1: 0, 2: 0, 3: 0, 4: 0}\n",
+    "    for data in tqdm.tqdm(all_data):\n",
+    "        post_target = cv2.imread(data.post_target, cv2.IMREAD_GRAYSCALE)\n",
+    "\n",
+    "        maxlvl = post_target.max()\n",
+    "        max_levels[maxlvl] += 1\n",
+    "\n",
+    "        unq = np.unique(post_target)\n",
+    "        for val in unq:\n",
+    "            dmg_level_existences[val] += 1\n",
+    "            if val != 0:\n",
+    "                dmg_level_pixel_counts[val] += (post_target == val).sum()\n",
+    "\n",
+    "    total_pix_count = sum(dmg_level_pixel_counts.values())\n",
+    "\n",
+    "    print(\"=== Statistics ===\")\n",
+    "    print(\"All Data:\", len(all_data))\n",
+    "    print(\"Number of images that doesn't contain any buildings:\", max_levels[0])\n",
+    "    print(\"Number of images that doesn't contain any damaged buildings:\", max_levels[1])\n",
+    "    print(\"Number of images with at most Minor Damage level:\", max_levels[2])\n",
+    "    print(\"Number of images with at most Major Damage level:\", max_levels[3])\n",
+    "    print(\"Number of images with at most Destroyed level:\", max_levels[4])\n",
+    "    print(\" *** \")\n",
+    "    print(\"Number of images that contain backround:\", dmg_level_existences[0])\n",
+    "    print(\"Number of images that contain undamaged buildings:\", dmg_level_existences[1])\n",
+    "    print(\"Number of images that contain Minor Damage level:\", dmg_level_existences[2])\n",
+    "    print(\"Number of images that contain Major Damage level:\", dmg_level_existences[3])\n",
+    "    print(\"Number of images that contain Destroyed level:\", dmg_level_existences[4])\n",
+    "    print(\" *** \")\n",
+    "    print(f\"Ratio of undamaged pixels: {dmg_level_pixel_counts[1] / total_pix_count:.4%}\")\n",
+    "    print(f\"Ratio of Minor Damage pixels: {dmg_level_pixel_counts[2] / total_pix_count:.4%}\")\n",
+    "    print(f\"Ratio of Major Damage pixels: {dmg_level_pixel_counts[3] / total_pix_count:.4%}\")\n",
+    "    print(f\"Ratio of Destroyed pixels: {dmg_level_pixel_counts[4] / total_pix_count:.4%}\")\n",
+    "    print(\" *** \")\n",
+    "    print(f\"( All damage levels in the dataset: {list(dmg_level_existences.keys())} )\")\n",
+    "\n",
+    "analyze_dataset(all_testv2_data, \"Testv2 Set\")\n",
+    "analyze_dataset(all_validv2_data, \"Validationv2 Set\")\n"
    ]
   }
  ],
