--- a/pipeline_changemamba.ipynb
+++ b/pipeline_changemamba.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "c2204f68",
    "metadata": {},
    "outputs": [
@@ -18,8 +18,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-10-04_09-41-42\n",
-      "Number of datasets: 8\n"
+      "2025-10-15_00-19-43\n",
+      "Number of datasets: 10\n"
      ]
     }
    ],
@@ -47,6 +47,8 @@
     "    train_data_list_path: str\n",
     "    test_dataset_path: str\n",
     "    test_data_list_path: str\n",
+    "    validation_dataset_path: str = None\n",
+    "    validation_data_list_path: str = None\n",
     "\n",
     "dataset_info_dict = {\n",
     "    # \"xBD\": DatasetInfo(\n",
@@ -60,6 +62,14 @@
     "        train_data_list_path = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/train_combined/train_list2.txt',\n",
     "        test_dataset_path    = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/test',\n",
     "        test_data_list_path  = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/test/test_list2.txt'\n",
+    "    ),\n",
+    "    \"xBDWithValid\": DatasetInfo(\n",
+    "        train_dataset_path        = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/train_combined',\n",
+    "        train_data_list_path      = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/train_combined/train_list3.txt',\n",
+    "        test_dataset_path         = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/test',\n",
+    "        test_data_list_path       = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/test/test_list3.txt',\n",
+    "        validation_dataset_path   = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/hold',\n",
+    "        validation_data_list_path = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/hold/validation_list3.txt',\n",
     "    ),\n",
     "    ###############################################\n",
     "    \"mwBTFreddy\": DatasetInfo(\n",
@@ -95,6 +105,14 @@
     "        test_dataset_path    = '/mnt/storage1/alpgenc/change_detection/datasets/pakistan_flooding/pakistan-flooding',\n",
     "        test_data_list_path  = '/mnt/storage1/alpgenc/change_detection/datasets/pakistan_flooding/pakistan-flooding/test_list.txt',\n",
     "    ),\n",
+    "    \"PakistanFloodingWithValid\": DatasetInfo(\n",
+    "        train_dataset_path       = '/mnt/storage1/alpgenc/change_detection/datasets/pakistan_flooding/pakistan-flooding',\n",
+    "        train_data_list_path     = '/mnt/storage1/alpgenc/change_detection/datasets/pakistan_flooding/pakistan-flooding/train_list_v2.txt',\n",
+    "        test_dataset_path        = '/mnt/storage1/alpgenc/change_detection/datasets/pakistan_flooding/pakistan-flooding',\n",
+    "        test_data_list_path      = '/mnt/storage1/alpgenc/change_detection/datasets/pakistan_flooding/pakistan-flooding/test_list_v2.txt',\n",
+    "        validation_dataset_path  = '/mnt/storage1/alpgenc/change_detection/datasets/pakistan_flooding/pakistan-flooding',\n",
+    "        validation_data_list_path= '/mnt/storage1/alpgenc/change_detection/datasets/pakistan_flooding/pakistan-flooding/validation_list_v2.txt',\n",
+    "    ),\n",
     "    ###############################################\n",
     "    \"HurricaneIan\": DatasetInfo(\n",
     "        train_dataset_path   = '/mnt/storage1/alpgenc/change_detection/datasets/hurricane_ian/hurricane-ian',\n",
@@ -124,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "a2975496",
    "metadata": {},
    "outputs": [
@@ -138,10 +156,10 @@
       "\u001b[01;34mclassification\u001b[0m/            \u001b[01;34mLOGLAR_CMAG\u001b[0m/                README_zh-CN.md\n",
       "\u001b[01;34mdataset_analysis_scripts\u001b[0m/  modelcard.sh                requirements.txt\n",
       "\u001b[01;34mfigures\u001b[0m/                   pipeline_changemamba.ipynb\n",
-      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-10-04_09-41-45_MambaBDA_Base_xBD_FOCAL_ALIGN_AGBD.log\n",
-      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-10-04_09-41-45_MambaBDA_Base_xBD_FOCAL_ALIGN_AGBD.pid.log\n",
+      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-10-15_00-19-46_MambaBDA_Base_xBDWithValid_ALIGN_AGB.log\n",
+      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-10-15_00-19-46_MambaBDA_Base_xBDWithValid_ALIGN_AGB.pid.log\n",
       "UID          PID    PPID  C STIME TTY          TIME CMD\n",
-      "alpgenc    20985       1  0 09:41 ?        00:00:01 python -u changedetection/sc\n"
+      "alpgenc   363541       1  0 00:19 ?        00:00:01 python -u changedetection/sc\n"
      ]
     }
    ],
@@ -159,20 +177,21 @@
     "\n",
     "\n",
     "MODEL_NAME = 'MambaBDA_Base' # \"MambaBDA_Tiny\" || \"MambaBDA_Small\" || \"MambaBDA_Base\"\n",
-    "DATASET = \"xBD\" # \"xBD\" || \"mwBTFreddy\" || \"EarthquakeTurkey\" || \"HurricaneIda\" || \"PakistanFlooding\" || \"merged1\"\n",
+    "DATASET = \"xBDWithValid\" # \"xBD\" || \"mwBTFreddy\" || \"EarthquakeTurkey\" || \"HurricaneIda\" || \"PakistanFlooding\" || \"merged1\"\n",
     "EXTENSION = \"tif\" if DATASET in [\"mwBTFreddy\"] else \"png\"\n",
     "\n",
     "cfg_file = cfg_dict[MODEL_NAME]\n",
     "pretrained_file = pretrained_dict[MODEL_NAME] # Use this to train from \"scratch\" (almost) || use next line to fine tune a trained model.\n",
     "# pretrained_file = \"/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-23_22-02-06_MambaBDA_Base_xBD_FOCAL/model_step100000.pth\"\n",
     "\n",
-    "FOCAL = True # True || False\n",
+    "FOCAL = False # True || False\n",
     "ALIGNMENT = True # True || False\n",
     "ATTN_GATE_BLDNG = True # True || False\n",
-    "ATTN_GATE_DMG = True # True || False\n",
+    "ATTN_GATE_DMG = False # True || False\n",
     "\n",
     "DETERMINISTIC = False # True || False # Not working for now so use False. (2025.09.29, torch==2.5.0) because of non-deterministic functions (e.g. F.cross_entropy)\n",
-    "VALIDATIONS = 8\n",
+    "VALIDATIONS = 16\n",
+    "BATCH_SIZE = 8 # 16 in paper, 8 for 24GB GPU\n",
     "MEASURE_TRAIN = True\n",
     "MAX_ITERS = 400_000\n",
     "\n",
@@ -185,10 +204,11 @@
     "\n",
     "FILE_ID_str = f\"{now}_{MODEL_NAME}_{DATASET}{FT_str}{FOCAL_str}{ALIGN_str}{AG_str}\"\n",
     "\n",
-    "train_dataset_path   = dataset_info_dict[DATASET].train_dataset_path\n",
-    "train_data_list_path = dataset_info_dict[DATASET].train_data_list_path\n",
-    "test_dataset_path    = dataset_info_dict[DATASET].test_dataset_path\n",
-    "test_data_list_path  = dataset_info_dict[DATASET].test_data_list_path\n",
+    "DS = dataset_info_dict[DATASET]\n",
+    "train_dataset_path   = DS.train_dataset_path\n",
+    "train_data_list_path = DS.train_data_list_path\n",
+    "test_dataset_path    = DS.validation_dataset_path if DS.validation_dataset_path is not None else DS.test_dataset_path\n",
+    "test_data_list_path  = DS.validation_data_list_path if DS.validation_data_list_path is not None else DS.test_data_list_path\n",
     "\n",
     "\n",
     "logfilename = f\"/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_{FILE_ID_str}.log\"\n",
@@ -210,7 +230,7 @@
     "COMMAND = f\"\"\"\n",
     "CUDA_LAUNCH_BLOCKING=1 nohup python -u changedetection/script/train_MambaBDA.py \\\n",
     "     --dataset                {DATASET} \\\n",
-    "     --batch_size             8 \\\n",
+    "     --batch_size             {BATCH_SIZE} \\\n",
     "     --crop_size              256 \\\n",
     "     --max_iters              {MAX_ITERS} \\\n",
     "     --model_type             {MODEL_NAME} \\\n",
@@ -255,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "070ec3e2",
    "metadata": {},
    "outputs": [
@@ -264,9 +284,9 @@
      "output_type": "stream",
      "text": [
       "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG\n",
-      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/infer_tr2025-09-27_14-47-52_MambaBDA_Base_xBD2_FOCAL_on_xBD2.log\n",
+      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/infer_tr2025-09-30_00-21-38_MambaBDA_Base_xBD_FOCAL_AGBD_on_xBD.log\n",
       "UID          PID    PPID  C STIME TTY          TIME CMD\n",
-      "alpgenc  3537558       1  0 22:03 ?        00:00:01 python -u changedetection/sc\n"
+      "alpgenc   235269       1  0 14:10 ?        00:00:01 python -u changedetection/sc\n"
      ]
     }
    ],
@@ -283,7 +303,7 @@
     "\n",
     "\n",
     "MODEL_NAME = 'MambaBDA_Base' # \"MambaBDA_Tiny\" || \"MambaBDA_Small\" || \"MambaBDA_Base\"\n",
-    "DATASET = \"xBD2\" # \"xBD\" || \"mwBTFreddy\" || \"mwBTFreddy_png\"\n",
+    "DATASET = \"xBD\" # \"xBD\" || \"mwBTFreddy\" || \"mwBTFreddy_png\"\n",
     "EXTENSION = \"tif\" if DATASET in [\"mwBTFreddy\"] else \"png\"\n",
     "\n",
     "cfg_file = cfg_dict[MODEL_NAME]\n",
@@ -291,11 +311,15 @@
     "test_data_list_path = dataset_info_dict[DATASET].test_data_list_path\n",
     "\n",
     "# infer_model_path = '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-21_23-51-27_MambaBDA_Tiny_xBD/model_step31250.pth'\n",
-    "infer_model_path = '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-27_14-47-52_MambaBDA_Base_xBD2_FOCAL/model_step50000.pth'\n",
+    "# infer_model_path = '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-27_14-47-52_MambaBDA_Base_xBD2_FOCAL/model_step50000.pth'\n",
+    "infer_model_path = '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-30_00-21-38_MambaBDA_Base_xBD_FOCAL_AGBD/model_step31250.pth'\n",
     "_, _trained_model_folder, _trained_model_pthname = infer_model_path.rsplit(\"/\", 2)\n",
     "trained_model_name = f'{_trained_model_folder}'\n",
     "\n",
-    "ALIGNMENT = True # True || False\n",
+    "ALIGNMENT = False # True || False\n",
+    "ATTN_GATE_BLDNG = True # True || False\n",
+    "ATTN_GATE_DMG = True # True || False\n",
+    "\n",
     "\n",
     "infer_logfilename = f\"/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/infer_{trained_model_name}_on_{DATASET}.log\"\n",
     "print(infer_logfilename)\n",
@@ -315,6 +339,8 @@
     "    --extension                 {EXTENSION} \\\n",
     "    --no-save_output_images \\\n",
     "    {'--enable_alignment' if ALIGNMENT else ''} \\\n",
+    "    {'--enable_attn_gate_building' if ATTN_GATE_BLDNG else ''} \\\n",
+    "    {'--enable_attn_gate_damage' if ATTN_GATE_DMG else ''} \\\n",
     "    >/dev/null 2>&1 & echo $! > {infer_pidfilename}\n",
     "\"\"\".replace(\"\\n\", \"\")\n",
     "\n",
