--- a/dataset_analysis_scripts/xBD_dataset_analysis.ipynb
+++ b/dataset_analysis_scripts/xBD_dataset_analysis.ipynb
@@ -367,7 +367,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BASE_PATH = \"/storage/alperengenc/change_detection/xBD_complete_png/train_combined\"\n",
+    "BASE_PATH            = \"/mnt/storage1/alpgenc/change_detection/xBD_complete_png/train_combined\"\n",
+    "TEST_BASE_PATH       = \"/mnt/storage1/alpgenc/change_detection/xBD_complete_png/test\"\n",
+    "VALIDATION_BASE_PATH = \"/mnt/storage1/alpgenc/change_detection/xBD_complete_png/hold\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train Set Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +401,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9168/9168 [01:33<00:00, 97.55it/s] "
+      "  1%|          | 66/9168 [00:00<01:11, 127.74it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 9168/9168 [00:59<00:00, 154.68it/s]"
      ]
     },
     {
@@ -439,8 +465,6 @@
     "    \"\"\"base name; without path, pre-post suffix and extension.\"\"\"\n",
     "    \n",
     "\n",
-    "# BASE_PATH = \"/storage/alperengenc/change_detection/xBD_complete_png/train_combined\"\n",
-    "BASE_PATH = \"/mnt/storage1/alpgenc/change_detection/xBD_complete_png/train_combined\"\n",
     "all_pre_images = glob.glob(f\"{BASE_PATH}/images/*_pre_disaster.png\")\n",
     "\n",
     "all_data: list[DataPaths] = []\n",
@@ -505,8 +529,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test Set Analysis"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +552,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 933/933 [00:07<00:00, 125.77it/s]"
+      "100%|██████████| 933/933 [00:06<00:00, 133.70it/s]"
      ]
     },
     {
@@ -576,8 +607,6 @@
     "    \"\"\"base name; without path, pre-post suffix and extension.\"\"\"\n",
     "    \n",
     "\n",
-    "# BASE_PATH = \"/storage/alperengenc/change_detection/xBD_complete_png/train_combined\"\n",
-    "TEST_BASE_PATH = \"/mnt/storage1/alpgenc/change_detection/xBD_complete_png/test\"\n",
     "_all_pre_images = glob.glob(f\"{TEST_BASE_PATH}/images/*_pre_disaster.png\")\n",
     "\n",
     "all_test_data: list[DataPaths] = []\n",
@@ -642,6 +671,155 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Validation Set Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating paths in /mnt/storage1/alpgenc/change_detection/xBD_complete_png/hold ...\n",
+      "Done, len(all_validation_data) = 933\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 933/933 [00:06<00:00, 152.26it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Statistics ===\n",
+      "All Test Data: 933\n",
+      "Number of images that doesn't contain any buildings: 182\n",
+      "Number of images that doesn't contain any damaged buildings: 240\n",
+      "Number of images with at most Minor Damage level: 64\n",
+      "Number of images with at most Major Damage level: 115\n",
+      "Number of images with at most Destroyed level: 332\n",
+      " *** \n",
+      "Number of images that contain backround: 933\n",
+      "Number of images that contain undamaged buildings: 569\n",
+      "Number of images that contain Minor Damage level: 277\n",
+      "Number of images that contain Major Damage level: 320\n",
+      "Number of images that contain Destroyed level: 332\n",
+      " *** \n",
+      "Ratio of undamaged pixels: 73.2889%\n",
+      "Ratio of Minor Damage pixels: 10.1548%\n",
+      "Ratio of Major Damage pixels: 10.7392%\n",
+      "Ratio of Destroyed pixels: 5.8171%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import cv2\n",
+    "import matplotlib.pyplot as plt\n",
+    "import tifffile as tf\n",
+    "import glob\n",
+    "import os.path\n",
+    "from dataclasses import dataclass\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "@dataclass\n",
+    "class DataPaths:\n",
+    "    pre_img: str\n",
+    "    post_img: str\n",
+    "    pre_target: str\n",
+    "    post_target: str\n",
+    "    stem: str\n",
+    "    \"\"\"base name; without path, pre-post suffix and extension.\"\"\"\n",
+    "    \n",
+    "\n",
+    "_all_pre_images = glob.glob(f\"{VALIDATION_BASE_PATH}/images/*_pre_disaster.png\")\n",
+    "\n",
+    "all_validation_data: list[DataPaths] = []\n",
+    "\n",
+    "print(f\"Generating paths in {VALIDATION_BASE_PATH} ...\")\n",
+    "for i, pre_img_path in enumerate(_all_pre_images):\n",
+    "    post_img_path = pre_img_path.replace(\"pre\", \"post\")\n",
+    "    img_base, _, _ = pre_img_path.rsplit(\"_\", 2) # path/to/images/malawi-cyclone_00000342_pre_disaster.tif\n",
+    "\n",
+    "    target_base = img_base.replace(\"images\", \"targets\")\n",
+    "    pre_target_path = f\"{target_base}_pre_disaster_target.png\"\n",
+    "    post_target_path = f\"{target_base}_post_disaster_target.png\"\n",
+    "\n",
+    "    stem = os.path.basename(img_base)\n",
+    "\n",
+    "    all_validation_data.append(DataPaths(pre_img_path, post_img_path, pre_target_path, post_target_path, stem))\n",
+    "print(f\"Done, {len(all_validation_data) = }\")\n",
+    "\n",
+    "damage_levels_dict = {\n",
+    "    0: \"Not Building\",\n",
+    "    1: \"No Damage\",\n",
+    "    2: \"Minor Damage\",\n",
+    "    3: \"Major Damage\",\n",
+    "    4: \"Destroyed\"\n",
+    "}\n",
+    "\n",
+    "max_levels = {0: 0, 1: 0, 2: 0, 3: 0, 4: 0}\n",
+    "dmg_level_existences = {0: 0, 1: 0, 2: 0, 3: 0, 4: 0}\n",
+    "dmg_level_pixel_counts = {1: 0, 2: 0, 3: 0, 4: 0}\n",
+    "for data in tqdm(all_validation_data):\n",
+    "    post_target = cv2.imread(data.post_target, cv2.IMREAD_GRAYSCALE)\n",
+    "\n",
+    "    maxlvl = post_target.max()\n",
+    "    max_levels[maxlvl] += 1\n",
+    "\n",
+    "    unq = np.unique(post_target)\n",
+    "    for val in unq:\n",
+    "        dmg_level_existences[val] += 1\n",
+    "        if val != 0:\n",
+    "            dmg_level_pixel_counts[val] += (post_target == val).sum()\n",
+    "\n",
+    "total_pix_count = sum(dmg_level_pixel_counts.values())\n",
+    "\n",
+    "print(\"=== Statistics ===\")\n",
+    "print(\"All Test Data:\", len(all_validation_data))\n",
+    "print(\"Number of images that doesn't contain any buildings:\", max_levels[0])\n",
+    "print(\"Number of images that doesn't contain any damaged buildings:\", max_levels[1])\n",
+    "print(\"Number of images with at most Minor Damage level:\", max_levels[2])\n",
+    "print(\"Number of images with at most Major Damage level:\", max_levels[3])\n",
+    "print(\"Number of images with at most Destroyed level:\", max_levels[4])\n",
+    "print(\" *** \")\n",
+    "print(\"Number of images that contain backround:\", dmg_level_existences[0])\n",
+    "print(\"Number of images that contain undamaged buildings:\", dmg_level_existences[1])\n",
+    "print(\"Number of images that contain Minor Damage level:\", dmg_level_existences[2])\n",
+    "print(\"Number of images that contain Major Damage level:\", dmg_level_existences[3])\n",
+    "print(\"Number of images that contain Destroyed level:\", dmg_level_existences[4])\n",
+    "print(\" *** \")\n",
+    "print(f\"Ratio of undamaged pixels: {dmg_level_pixel_counts[1] / total_pix_count:.4%}\")\n",
+    "print(f\"Ratio of Minor Damage pixels: {dmg_level_pixel_counts[2] / total_pix_count:.4%}\")\n",
+    "print(f\"Ratio of Major Damage pixels: {dmg_level_pixel_counts[3] / total_pix_count:.4%}\")\n",
+    "print(f\"Ratio of Destroyed pixels: {dmg_level_pixel_counts[4] / total_pix_count:.4%}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pre Disaster (Building Mask) Analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -702,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +889,10 @@
      "text": [
       "Warning; create data paths (all_data) in the previous cells before running this.\n",
       "Generated: /mnt/storage1/alpgenc/change_detection/xBD_complete_png/train_combined/train_list2.txt\n",
-      "Generated: /mnt/storage1/alpgenc/change_detection/xBD_complete_png/test/test_list2.txt\n"
+      "Generated: /mnt/storage1/alpgenc/change_detection/xBD_complete_png/test/test_list2.txt\n",
+      "Generated: /mnt/storage1/alpgenc/change_detection/xBD_complete_png/train_combined/train_list3.txt\n",
+      "Generated: /mnt/storage1/alpgenc/change_detection/xBD_complete_png/test/test_list3.txt\n",
+      "Generated: /mnt/storage1/alpgenc/change_detection/xBD_complete_png/hold/validation_list3.txt\n"
      ]
     }
    ],
@@ -736,11 +917,29 @@
     "            f.write(f\"{d.stem}\\n\")\n",
     "        print(f\"Generated: {os.path.realpath(f.name)}\")\n",
     "\n",
+    "def create_train_test_lists3(base_path: str, test_base_path: str, validation_base_path: str,\n",
+    "                            all_data: list[DataPaths],  all_test_data: list[DataPaths], all_validation_data: list[DataPaths]):\n",
+    "    with open(f\"{base_path}/train_list3.txt\", \"w\") as f:\n",
+    "        for d in all_data:\n",
+    "            f.write(f\"{d.stem}\\n\")\n",
+    "        print(f\"Generated: {os.path.realpath(f.name)}\")\n",
+    "\n",
+    "    with open(f\"{test_base_path}/test_list3.txt\", \"w\") as f:\n",
+    "        for d in all_test_data:\n",
+    "            f.write(f\"{d.stem}\\n\")\n",
+    "        print(f\"Generated: {os.path.realpath(f.name)}\")\n",
+    "\n",
+    "    with open(f\"{validation_base_path}/validation_list3.txt\", \"w\") as f:\n",
+    "        for d in all_validation_data:\n",
+    "            f.write(f\"{d.stem}\\n\")\n",
+    "        print(f\"Generated: {os.path.realpath(f.name)}\")\n",
+    "\n",
     "################################################################################################################\n",
     "\n",
     "TRAIN_RATIO = 0.80\n",
-    "\n",
     "create_train_test_lists2(BASE_PATH, TEST_BASE_PATH, all_data, all_test_data)\n",
+    "\n",
+    "create_train_test_lists3(BASE_PATH, TEST_BASE_PATH, VALIDATION_BASE_PATH, all_data, all_test_data, all_validation_data)\n",
     "\n",
     "\n"
    ]
