- AttentionGate2d: fix / revise implementation. Changed normalization layers: batchnorm to groupnorm for better performance in small minibatches. Added residual gating.  Changed initial bias values to start gates closed. For attention gate params, increased learning rate and decreased weight decay in optimizer. Added extra buffers and stat getter for monitoring (debugging) & logged in every validation step. - inference: changed attention heatmap saving method. Now displays ground truth and heatmaps side by side for both building and damage heads.

--- a/pipeline_changemamba.ipynb
+++ b/pipeline_changemamba.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "c2204f68",
    "metadata": {},
    "outputs": [
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-10-15_00-19-43\n",
+      "2025-10-15_22-02-50\n",
       "Number of datasets: 10\n"
      ]
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "a2975496",
    "metadata": {},
    "outputs": [
@@ -155,11 +155,25 @@
       "\u001b[01;34mchangedetection\u001b[0m/           LICENSE                     README.md\n",
       "\u001b[01;34mclassification\u001b[0m/            \u001b[01;34mLOGLAR_CMAG\u001b[0m/                README_zh-CN.md\n",
       "\u001b[01;34mdataset_analysis_scripts\u001b[0m/  modelcard.sh                requirements.txt\n",
-      "\u001b[01;34mfigures\u001b[0m/                   pipeline_changemamba.ipynb\n",
-      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-10-15_00-19-46_MambaBDA_Base_xBDWithValid_ALIGN_AGB.log\n",
-      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-10-15_00-19-46_MambaBDA_Base_xBDWithValid_ALIGN_AGB.pid.log\n",
+      "\u001b[01;34mfigures\u001b[0m/                   pipeline_changemamba.ipynb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/alpgenc/miniconda3/envs/changemamba2/lib/python3.10/site-packages/IPython/core/magics/osm.py:417: UserWarning: This is now an optional IPython functionality, setting dhist requires you to install the `pickleshare` library.\n",
+      "  self.shell.db['dhist'] = compress_dhist(dhist)[-100:]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-10-16_01-12-26_MambaBDA_Base_xBDWithValid_AGBD.log\n",
+      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-10-16_01-12-26_MambaBDA_Base_xBDWithValid_AGBD.pid.log\n",
       "UID          PID    PPID  C STIME TTY          TIME CMD\n",
-      "alpgenc   363541       1  0 00:19 ?        00:00:01 python -u changedetection/sc\n"
+      "alpgenc   385808       1  0 01:12 ?        00:00:01 python -u changedetection/sc\n"
      ]
     }
    ],
@@ -177,7 +191,7 @@
     "\n",
     "\n",
     "MODEL_NAME = 'MambaBDA_Base' # \"MambaBDA_Tiny\" || \"MambaBDA_Small\" || \"MambaBDA_Base\"\n",
-    "DATASET = \"xBDWithValid\" # \"xBD\" || \"mwBTFreddy\" || \"EarthquakeTurkey\" || \"HurricaneIda\" || \"PakistanFlooding\" || \"merged1\"\n",
+    "DATASET = \"xBDWithValid\" # \"xBD\" || \"mwBTFreddy\" || \"EarthquakeTurkey\" || \"HurricaneIda\" || \"PakistanFlooding\" || \"merged1\" || \"...WithValid\"\n",
     "EXTENSION = \"tif\" if DATASET in [\"mwBTFreddy\"] else \"png\"\n",
     "\n",
     "cfg_file = cfg_dict[MODEL_NAME]\n",
@@ -185,9 +199,9 @@
     "# pretrained_file = \"/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-23_22-02-06_MambaBDA_Base_xBD_FOCAL/model_step100000.pth\"\n",
     "\n",
     "FOCAL = False # True || False\n",
-    "ALIGNMENT = True # True || False\n",
+    "ALIGNMENT = False # True || False\n",
     "ATTN_GATE_BLDNG = True # True || False\n",
-    "ATTN_GATE_DMG = False # True || False\n",
+    "ATTN_GATE_DMG = True # True || False\n",
     "\n",
     "DETERMINISTIC = False # True || False # Not working for now so use False. (2025.09.29, torch==2.5.0) because of non-deterministic functions (e.g. F.cross_entropy)\n",
     "VALIDATIONS = 16\n",
@@ -275,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "070ec3e2",
    "metadata": {},
    "outputs": [
@@ -284,9 +298,9 @@
      "output_type": "stream",
      "text": [
       "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG\n",
-      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/infer_tr2025-09-30_00-21-38_MambaBDA_Base_xBD_FOCAL_AGBD_on_xBD.log\n",
+      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/infer_tr2025-10-15_16-20-21_MambaBDA_Base_PakistanFloodingWithValid_AGBD_on_PakistanFloodingWithValid.log\n",
       "UID          PID    PPID  C STIME TTY          TIME CMD\n",
-      "alpgenc   235269       1  0 14:10 ?        00:00:01 python -u changedetection/sc\n"
+      "alpgenc   385045       1  0 23:30 ?        00:00:01 python -u changedetection/sc\n"
      ]
     }
    ],
@@ -303,16 +317,18 @@
     "\n",
     "\n",
     "MODEL_NAME = 'MambaBDA_Base' # \"MambaBDA_Tiny\" || \"MambaBDA_Small\" || \"MambaBDA_Base\"\n",
-    "DATASET = \"xBD\" # \"xBD\" || \"mwBTFreddy\" || \"mwBTFreddy_png\"\n",
+    "DATASET = \"PakistanFloodingWithValid\" # \"xBD\" || \"mwBTFreddy\" || \"mwBTFreddy_png\"\n",
     "EXTENSION = \"tif\" if DATASET in [\"mwBTFreddy\"] else \"png\"\n",
     "\n",
     "cfg_file = cfg_dict[MODEL_NAME]\n",
-    "test_dataset_path = dataset_info_dict[DATASET].test_dataset_path\n",
-    "test_data_list_path = dataset_info_dict[DATASET].test_data_list_path\n",
+    "DS = dataset_info_dict[DATASET]\n",
+    "test_dataset_path = DS.test_dataset_path\n",
+    "test_data_list_path = DS.test_data_list_path\n",
     "\n",
     "# infer_model_path = '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-21_23-51-27_MambaBDA_Tiny_xBD/model_step31250.pth'\n",
     "# infer_model_path = '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-27_14-47-52_MambaBDA_Base_xBD2_FOCAL/model_step50000.pth'\n",
-    "infer_model_path = '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-30_00-21-38_MambaBDA_Base_xBD_FOCAL_AGBD/model_step31250.pth'\n",
+    "# infer_model_path = '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-30_00-21-38_MambaBDA_Base_xBD_FOCAL_AGBD/model_step31250.pth'\n",
+    "infer_model_path = '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-10-15_16-20-21_MambaBDA_Base_PakistanFloodingWithValid_AGBD/model_step12496_best.pth'\n",
     "_, _trained_model_folder, _trained_model_pthname = infer_model_path.rsplit(\"/\", 2)\n",
     "trained_model_name = f'{_trained_model_folder}'\n",
     "\n",
